--- a/scss/style.css
+++ b/scss/style.css
@@ -156,7 +156,8 @@ footer h4:after {
 
 .navbar-nav {
   width: 100%;
-  justify-content: flex-end;
+  justify-content: center;
+  align-items: center;
 }
 
 .co1 {
